tests/res/arrays/error_index_bounds.say
print([][0]); // error: Array index out of bounds: 0
// @split
print([0][-1]); // error: Array index out of bounds: -1
// @split
print([0][1]); // error: Array index out of bounds: 1